add real-time typing search with lazy loading in offline mode